--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -17,9 +17,32 @@ body {
     display: flex;
     flex-direction: column;
 }
+
+/* Navbar */
+
  nav, .hero {
     background-color: var(--dark-bg);
  }
+
+ nav {
+   display: flex;
+
+   padding: 20px 0px 20px 100px;
+   color: var(--hero-text);
+   align-items: center;
+ }
+
+.links {
+   list-style-type: none;
+   display: flex;
+   margin-left: auto;
+   padding: 0px 100px 0px 0px;
+}
+
+.link li {
+
+}
+
 
  .hero {
     display: flex;
