--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -10,13 +10,8 @@ body {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    text-align: center;
 }
 
-.container {
-    display: flex;
-    flex-direction: column;
-}
 
 /* Navbar */
 
@@ -26,6 +21,7 @@ body {
 
  nav {
    display: flex;
+   justify-content: center;
    padding: 20px 0px 20px 100px;
    color: var(--hero-text);
    align-items: center;
@@ -48,11 +44,50 @@ body {
     justify-content: space-evenly;
     align-items: center;
     padding: 2rem;
+    height: 600px;
+ }
+
+ .hero-left {
+   color: var(--hero-text);
+ }
+
+ .hero-left h1 {
+   font-size: 3rem;
  }
 
  .image {
     width: 600px;
     height: 300px;
     background-color: #E5E7EB;
+ }
+
+ .info {
+   display: flex;
+   flex-direction: column;
+   text-align: center;
+   height: 400px;
+ }
+
+ .cards { 
+   display: flex;
+   justify-content: center;
+ }
+
+ .card {
+   width: 200px;
+   height: 200px;
+ }
+
+ .quote {
+   display: flex;
+   justify-content: center;
+   height: 400px;
+   background-color: var(--quote-bg);
+ }
+
+ .quote p {
+   font-size: 2.5rem;
+   max-width: 800px;
+   text-align: center;
  }
 
