--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -81,17 +81,26 @@ body {
 
  .quote {
    display: flex;
-   justify-content: center;
+   flex-direction: column;
+   align-items: center;
    height: 400px;
    background-color: var(--quote-bg);
  }
 
  .quote p {
-   font-size: 2.5rem;
    max-width: 800px;
+ }
+ 
+ .para-quote {
+   font-size: 2.2em;
    text-align: center;
  }
 
+ .para-author {
+   font-size: 1.5em;
+   font-weight: 600;
+   text-align: justify;
+ }
 
  .cta {
    display: flex;
