--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -1,151 +1,193 @@
 :root {
-     --dark-bg: #1F2937; /* hero and footer */
-     --quote-bg: #E5E7EB; 
-     --hero-text: #F9FAF8;
-     --hero-secondary: #E5E7EB;
-     --cta-bg: #3882F6;
+  --dark-bg: #1f2937; /* hero and footer */
+  --quote-bg: #e5e7eb;
+  --hero-text: #f9faf8;
+  --hero-secondary: #e5e7eb;
+  --cta-bg: #3882f6;
 }
 
 body {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-
 
 /* Navbar */
 
- nav, .hero {
-    background-color: var(--dark-bg);
- }
+nav,
+.hero {
+  background-color: var(--dark-bg);
+}
 
- nav {
-   display: flex;
-   justify-content: center;
-   padding: 20px 0px 20px 100px;
-   color: var(--hero-text);
-   align-items: center;
- }
+nav {
+  display: flex;
+  justify-content: center;
+  color: var(--hero-text);
+  align-items: center;
+}
+
+.container {
+  display: flex;
+  padding-top: 16px;
+  width: 1350px;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.logo {
+  font-size: 2rem;
+  font-weight: bold;
+}
 
 .links {
-   list-style-type: none;
-   display: flex;
-   margin-left: auto;
-   padding: 0px 100px 0px 0px;
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
+
+  margin-left: auto;
+  padding: 0px 100px 0px 0px;
 }
 
-.link li {
-
+.links a {
+  text-decoration: none;
+  color: var(--hero-text);
+  font-size: 1.3rem;
+  padding-left: 22px;
 }
 
+.hero {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 2rem;
+  height: 600px;
+}
 
- .hero {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 2rem;
-    height: 600px;
- }
+.hero-left {
+  color: var(--hero-text);
+}
 
- .hero-left {
-   color: var(--hero-text);
- }
+.hero-left h1 {
+  font-size: 3rem;
+}
 
- .hero-left h1 {
-   font-size: 3rem;
- }
+.image {
+  width: 650px;
+  height: 300px;
+  background-color: #e5e7eb;
+  opacity: 50%;
+}
 
- .image {
-    width: 650px;
-    height: 300px;
-    background-color: #E5E7EB;
-    opacity: 50%;
- }
+.info {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  height: 400px;
+  align-items: center;
+}
 
- .info {
-   display: flex;
-   flex-direction: column;
-   text-align: center;
-   height: 400px;
- }
+.cards {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
- .cards { 
-   display: flex;
-   justify-content: center;
- }
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 200px;
+  margin-top: 32px;
+  gap: 8px;
+}
 
- .card {
-   width: 200px;
-   height: 200px;
- }
+.blue-box {
+  width: 100px;
+  height: 100px;
+  border-radius: 8px;
+  border: 4px solid #3882f6;
+}
 
- .quote {
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   height: 400px;
-   background-color: var(--quote-bg);
- }
+.quote {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 400px;
+  background-color: var(--quote-bg);
+}
 
- .quote p {
-   max-width: 800px;
- }
- 
- .para-quote {
-   font-size: 2.2em;
-   text-align: center;
- }
+.quote p {
+  max-width: 800px;
+}
 
- .para-author {
-   font-size: 1.5em;
-   font-weight: 600;
-   text-align: justify;
- }
+.para-quote {
+  font-size: 2.2em;
+  text-align: center;
+}
 
- .cta {
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   height: 300px;
-   margin: 1rem;
- }
+.para-author {
+  font-size: 1.5em;
+  font-weight: 600;
+  text-align: justify;
+}
 
- .cta-card {
-   display: flex;
-   justify-content:space-around;
-   align-items: center;
-   height: 150px;
-   width: 1200px;
-   background-color: var(--cta-bg);
+.cta {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 300px;
+  margin: 1rem;
+}
+
+.cta-card {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 150px;
+  width: 1200px;
+  background-color: var(--cta-bg);
+  border-radius: 6px;
+}
+
+button {
+   padding: 6px 22px;
+   font-size: 1.2rem;
    border-radius: 6px;
- }
-
+   border: none;
+   background-color: #3882f6;
+   color: #f9faf8;
+}
 
 .card-left {
-   color: var(--hero-text);
+  color: var(--hero-text);
 }
 
- .card-left h3 {
-   margin: 0;
-   font-size: 1.7em;
- }
+.card-left h3 {
+  margin: 0;
+  font-size: 1.7em;
+}
 
- .card-left p {
-   margin: 0;
-   font-size: 1.2em;
- }
+.card-left p {
+  margin: 0;
+  font-size: 1.2em;
+}
 
+.card-right button {
+   background-color: #f9faf8;
+   color: #3882f6;
+}
 
- .footer {
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   height: 80px;
-   background-color: var(--dark-bg);
- }
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80px;
+  background-color: var(--dark-bg);
+}
 
- .footer p {
-   font-size: 1.2rem;
-   color: var(--hero-text);
- }
+.footer p {
+  font-size: 1.2rem;
+  color: var(--hero-text);
+}
+
 
